deploy/apps/web/admin-web/overlays/development/ingress-traefik-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: admin-web-ingress
spec:
  rules:
    - host: dev.web.test.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: admin-web
                port:
                  number: 80
